--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport"
+    content="width=device-width,initial-scale=1.0,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>xkweb</title>
+  <title>星空学生创新中心</title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but xkweb doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    <strong>脚本现在处于禁止状态，请开启脚本之后刷新本页面！</strong>
+    <strong>We're sorry but xkweb doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
